--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
+      <div class="container-fluid">
       <div class="card" style="width: 18rem;">
         <img src="..." class="card-img-top" alt="...">
         <div class="card-body">
@@ -100,5 +101,6 @@
           <a href="#" class="card-link">Another link</a>
         </div>
       </div>
+    </div>
 </body>
 </html>
